--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         downloadLink: 'https://sfl.gl/7G32h'
       },
       {
-        id: 'picsart-pro',
+        id: 'picsart-gold',
         name: 'Picsart Gold',
         author: 'v28.9.6',
         image: 'https://img.utdstc.com/icon/7ca/e68/7cae689089d12acb995d93f72c77958ec48270c351b8ad3d6953cd200a3e6f5b:200',
